--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,46 +1,41 @@
-<nav class="navbar navbar-expand-sm navbar-light bg-light pt-3 " id="NavbarFixed">
+<img  src="/assets/FotoHomePage.png" width="100%"  height="auto" >
 
-    <div class="container-fluid">
+<nav class="navbar navbar-expand-md navbar-light bg-light">
+   
+    <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
+        aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapsibleNavId">
+        <ul class="navbar-nav">
 
-        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="collapse"
-            data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          
-            <ul class="navbar-nav ">
-
-
-                <li class="nav-item pr-5">
-                    <a id="TabsStyles" class="nav-link active text-dark" aria-current="page" href="/"><strong>¿Que hacemos?</strong></a>
-                </li>
-                
-                <li class="nav-item pr-5"  id="TabsGoes">
-                    <a id="TabsStyles" class="nav-link text-dark" routerLink="/My-Technology-Strenght"><strong>Centro de Ayuda</strong></a>
-                </li>
-                <li class="nav-item pr-5"  id="TabsGoes">
-                    <a id="TabsStyles" class="nav-link text-dark" routerLink="/Web-Proyects"><strong>Oficinas Virtuales</strong></a>
-                </li>
-                <li class="nav-item pr-5"  id="TabsGoes">
-                    <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Ultimas Noticias</strong></a>
-                </li>
-                <li class="nav-item pr-5"  id="TabsGoes">
-                    <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Vitrina</strong></a>
-                </li>
-                <li class="nav-item pr-5"  id="TabsGoes">
-                    <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Sellos Verdes</strong></a>
-                </li>
-                <li class="nav-item pr-5"  id="TabsGoes">
-                    <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Podcast</strong></a>
-                </li>
-                <li class="nav-item pr-5"  id="TabsGoes">
-                    <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Webinars</strong></a>
-                </li>
-               
-                
-
-            </ul>
-        </div>
+            <li class="nav-item pr-5">
+                <a id="TabsStyles" class="nav-link active text-dark" aria-current="page" href="/"><strong>¿Que hacemos?</strong></a>
+            </li>
+            <li class="nav-item pr-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Centro-Ayuda-Goes"><strong>Centro de Ayuda</strong></a>
+            </li>
+            <li class="nav-item pr-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Oficinas-Virtuales"><strong>Oficinas Virtuales</strong></a>
+            </li>
+            <li class="nav-item pr-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Noticias-Goes"><strong>Ultimas Noticias</strong></a>
+            </li>
+            <li class="nav-item pr-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Vitrina-Estudiantil"><strong>Vitrina</strong></a>
+            </li>
+            <li class="nav-item pr-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Sellos-Verdes"><strong>Sellos Verdes</strong></a>
+            </li>
+            <li class="nav-item pr-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Podcast</strong></a>
+            </li>
+            <li class="nav-item pr-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Webinars</strong></a>
+            </li>
+           
+        </ul>
+       
     </div>
 </nav>
+
