cambios por Aleeeeee

--- a/src/app/centro-ayuda/centro-ayuda.component.html
+++ b/src/app/centro-ayuda/centro-ayuda.component.html
@@ -1,29 +1,37 @@
 <app-navbar></app-navbar>
 <img src="/assets/Foto3HomePage.png" width="100%" height="auto" alt="">
-    <div style="padding: 0.5cm;"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm">
-                <a href="http://"><img id="IconWhatsapp" src="/assets/WhatsAppIcon.png" width="150px"></a>
-                <h3 class="text-center">¿TENES UN 911?
-                    <br>
-                    Hablemos por WhatsApp
-                </h3>
+<div style="padding: 0.5cm;"></div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm">
+            <a href="http://"><img class="d-block mx-auto" id="IconWhatsapp" src="/assets/WhatsAppIcon.png"
+                    width="150px"></a>
+            <br>
 
-            </div>
-            <div class="col-sm">
+            <h3 class="text-center">¿TENES UN 911?
+                <br>
+                Hablemos por WhatsApp
+            </h3>
+            <br>
+            <br>
+        </div>
+        <div class="col-sm">
 
-                <h3 class="text-center">LAS 10 CONSULTAS + FRECUENTES
-                </h3>
-
-                <button class="d-block mx-auto btn btn-warning">CLICK HERE</button>
-            </div>
-            <div class="col-sm">
-                <a href="http://"><img id="IconWhatsapp" src="/assets/InstagramIcon.png" width="150px"></a>
-                <h3 class="text-center">EN INSTA SUBIMOS
-                    <br>
-                    LO + IMPORTANTE
-                </h3>
-            </div>
+            <h3 class="text-center">LAS 10 CONSULTAS + FRECUENTES
+            </h3>
+            <br>
+            <button class="d-block mx-auto btn btn-warning">CLICK HERE</button>
+            <br>
+            <br>
+        </div>
+        <div class="col-sm">
+            <a href="http://"><img class="d-block mx-auto" id="IconWhatsapp" src="/assets/InstagramIcon.png"
+                    width="150px"></a>
+            <br>
+            <h3 class="text-center">EN INSTA SUBIMOS
+                <br>
+                LO + IMPORTANTE
+            </h3>
         </div>
     </div>
+</div>
