--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,27 +1,38 @@
 <div id="TestImage"></div>
 <div>
 
-   
+
     <app-navbar></app-navbar>
-    <div class="row">
-        <div class="col">
-            <h1 style="font-size:6cm;font-family: 'Lucida Sans';">OK,</h1>
+    <div style="padding: 1.5cm;"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col" style="margin-left: 50px;">
+                <h1 style="font-size:6cm;font-family: 'Lucida Sans';">OK,</h1>
 
-            <h1 style="font-size:2cm;font-family: 'Lucida Sans'; color: rgb(235, 158, 17);">¿QUÉ PODEMOS <br> HACER POR
-                VOS?</h1>
+                <h1 style="font-size:2cm;font-family: 'Lucida Sans'; color: rgb(235, 158, 17);">¿QUÉ PODEMOS <br> HACER
+                    POR
+                    VOS?</h1>
 
-            <h2 class="text-justify">Podemos apoyarte en los diferentes procesos administrativos de la U, darte soporte
-                si tenés problemas de
-                matrícula, dudas sobre cursos, Blackboard, Enrollogic y hasta escucharte si estás pasando un problema
-                que afecte tu rendimiento en la U, somos estudiantes apoyando estudiantes. </h2>
-        </div>
+                <h2 class="text-justify">Podemos apoyarte en los diferentes procesos administrativos de la U, darte
+                    soporte
+                    si tenés problemas de
+                    matrícula, dudas sobre cursos, Blackboard, Enrollogic y hasta escucharte si estás pasando un
+                    problema
+                    que afecte tu rendimiento en la U, somos estudiantes apoyando estudiantes. </h2>
+            </div>
 
-        <div class="col">
-            <br>
-            <br>
-            <img src="/assets/Foto2HomePage.png" width="100%" height="auto" alt="">
+            <div class="col">
+                <br>
+                <br>
+                <img src="/assets/Foto2HomePage.png" width="100%" height="auto" alt="">
 
+            </div>
         </div>
     </div>
-  
+
+    <div class="container-fluid">
+      <div style="padding: 50px; border-style: solid; border-color: black;"></div>
+      <hr>
+    </div>
+
 </div>
