--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,37 +1,37 @@
 <img  src="/assets/FotoHomePage.png" width="100%"  height="auto" >
 
-<nav class="navbar navbar-expand-md navbar-light bg-light">
+<nav class="navbar navbar-expand-md navbar-light bg-light d-flex justify-content-center" style="border-style: solid; border-color: rgb(92,44,92);">
    
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavId">
-        <ul class="navbar-nav">
+    <div class="collapse navbar-collapse" id="collapsibleNavId" >
+        <ul class="navbar-nav" style="margin-left: 80px;">
 
-            <li class="nav-item pr-5">
-                <a id="TabsStyles" class="nav-link active text-dark" aria-current="page" href="/"><strong>¿Que hacemos?</strong></a>
+            <li class="nav-item pr-5" >
+                <a id="TabsStyles" class="nav-link active text-dark" aria-current="page" href="/"><strong><h3>¿Que hacemos?</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Centro-Ayuda-Goes"><strong>Centro de Ayuda</strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Centro-Ayuda-Goes"><strong><h3>Centro de Ayuda</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Oficinas-Virtuales"><strong>Oficinas Virtuales</strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Oficinas-Virtuales"><strong><h3>Oficinas Virtuales</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Noticias-Goes"><strong>Ultimas Noticias</strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Noticias-Goes"><strong><h3>Ultimas Noticias</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Vitrina-Estudiantil"><strong>Vitrina</strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Vitrina-Estudiantil"><strong><h3>Vitrina</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Sellos-Verdes"><strong>Sellos Verdes</strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Sellos-Verdes"><strong><h3>Sellos Verdes</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Podcast</strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong><h3>Podcast</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong>Webinars</strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong><h2>Webinars</h2></strong></a>
             </li>
            
         </ul>
