--- a/src/app/oficina-virtual/oficina-virtual.component.html
+++ b/src/app/oficina-virtual/oficina-virtual.component.html
@@ -1,15 +1,20 @@
 <app-navbar></app-navbar>
 <div class="container-fluid">
 
-   <br>
+    <br>
     <div class="container-fluid">
         <div class="row">
             <div class="col-6" style="max-width: 40rem;">
                 <h1 style="font-size:5cm;font-family: 'Lucida Sans'; color: rgb(121, 22, 121);">LA <br>
                     OFI
-                    <br>
-                    <h5 style="font-size:0.8cm;">VIRTUAL DE CADA GOES ESTA AQUI</h5>
+                    <div style="padding: 30px;"></div>
+                    <h5 style="font-size:0.8cm;">VIRTUAL DE CADA GOES ESTA AQUI
+                        <hr>
+                        Esta Seccion esta en construccion! pronto estara habilitada!
+                    </h5>
+                  
                 </h1>
+               
             </div>
             <div class="col">
                 <div id="multi-item-example" class="carousel slide carousel-multi-item" data-ride="carousel">
@@ -267,7 +272,73 @@
     </div>
     <!--FIN DEL CARRUSEL DE CARRERA-->
     <hr>
-   
 
+    <div class="container-fluid">
+
+        <h1 class="text-center" style="font-size:2cm;font-family: 'Lucida Sans'; color: rgb(121, 22, 121);">LA <br>
+            OFI
+            <br>
+            <h5 style="font-size:0.8cm; color: coral;">Publicidad</h5>
+        </h1>
+        <div class="card border-dark">
+            <img class="card-img-top" src="holder.js/100px180/" alt="">
+            <div class="card-body">
+                <div class="row">
+                    <div class="col">
+                        <div style="border-color: black; border-radius: 50%;">
+                            <img class="d-block mx-auto" style="border-radius: 50px;"
+                                src="/assets/FotosCarreras/FotoPresidente.jpg" width="50%" height="500px">
+                                <h3 class="text-center">Presidente</h3>
+                            <hr>
+                            <p id="GeneralDescriptions" class="text-justify">
+                                <strong>
+                                    Mi nombre es Jose Loaiza, estoy en mi penúltimo cuatrimestre y este es mi segundo
+                                    año
+                                    como presidente del GOES de la carrera, estamos muy felices de poder apoyarlos en
+                                    todo
+                                    lo que sea necesario, trabajamos para organizar actividades con los mejores
+                                    profesionales del mercado de la publicidad como un complemento a los cursos que
+                                    recibimos, también queremos implementar algunos webinars relacionados al trabajo en
+                                    equipo, salud emocional y otros, estamos siempre a la orden.
+                                </strong>
+
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <img class="d-block mx-auto" style="border-radius: 50px;"
+                            src="/assets/FotosCarreras/FotoVicepresidente.jpg" width="50%" height="500px">
+                            <h3 class="text-center">Vicepresidenta</h3>
+                        <hr>
+                        <p id="GeneralDescriptions" class="text-justify">
+                            <strong> Soy Stacy Artavia vicepresidente del GOES de la carrera, estoy cursando mi
+                                penúltimo
+                                cuatrimestre de la carrera, soy una persona que me gusta mucho poder ayudar en todo lo
+                                que
+                                pueda, me gusta mucho siempre aportar ideas y también la creación de contenido para las
+                                redes sociales. Es un honor para mi poder ayudarle en todo lo que pueda y estoy para
+                                servirles.</strong>
+
+                        </p>
+                    </div>
+                </div>
+                <hr>
+                <div class="container">
+                    
+                <p class="text-justify" id="GeneralDescriptions">
+                    De parte del Goes, le damos la bienvenida a la carrera de Publicidad con énfasis en producción
+                    multimedia, es un gusto de parte de Jose Loiza y Stacy Artavia poder ayudarles en en el resto del
+                    año 2021 e inicios del 2022 con actividades para el crecimiento tanto personal como profesional,
+                    sabemos que les van a encantar y sacar mucho provecho, estamos 100% disponibles para aclarar sus
+                    dudas y ayudarlos en sus procesos durante la carrera.
+
+                </p>
+                <hr>
+                
+                </div>
+            </div>
+        </div>
+
+    </div>
 
 </div>
