--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -7,7 +7,7 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="collapsibleNavId" >
-        <ul class="navbar-nav" style="margin-left: 80px;">
+        <ul class="navbar-nav">
 
             <li class="nav-item pr-5" >
                 <a id="TabsStyles" class="nav-link active text-dark" aria-current="page" href="/"><strong><h3>¿Que hacemos?</h3></strong></a>
