home page terminado

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,7 +1,5 @@
 <div id="TestImage"></div>
 <div>
-
-
     <app-navbar></app-navbar>
     <div style="padding: 1.5cm;"></div>
     <div class="container-fluid">
@@ -31,8 +29,110 @@
     </div>
 
     <div class="container-fluid">
-      <div style="padding: 50px; border-style: solid; border-color: black;"></div>
-      <hr>
+        <div style="padding: 50px;"></div>
+        <hr>
     </div>
+    <div class="container-fluid">
+        <div class="row">
 
+            <div class="col">
+                <strong>
+                    <h1 id="TitleContactos">CONTACTOS</h1>
+                </strong>
+                <br>
+                <br>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <a href="http://instragram.com">
+                            <img src="/assets/InstagramIcon.png" width="100% " height="auto"></a>
+                    </div>
+                    <div class="col">
+                        <h2>Somos_GOES</h2>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <a href="http://Whatsapp.com">
+                            <img src="/assets/WhatsAppIcon.png" width="100% " height="auto">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <h2>8888-7171</h2>
+                    </div>
+                </div>
+                <br>
+                <br>
+                <div class="row">
+                    <div class="col-sm-1">
+                        <a href="http://Whatsapp.com">
+                            <img src="/assets/emailIcon.png" width="100% " height="auto">
+                        </a>
+                    </div>
+                    <div class="col">
+                        <h2>ayuda@somos-goes.com</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <img id="ImageLogoGoes" src="/assets/LogoGoes.png" width="100%" height="auto">
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div style="padding: 50px; "></div>
+        <hr>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col">
+                <img id="ImageLogoGoes" src="/assets/CajadeRecursos.png" width="70%" alt="">
+                <h1 class="text-center" id="TitleCajaRecursos">CAJA DE RECURSOS</h1>
+            </div>
+            <div class="col">
+                <br>
+                <div class="row">
+                    <div class="col" style="max-width: 10rem;">
+                        <a href="http://">
+
+                            <img src="/assets/DownloadLogo.png" width="100%" height="auto" alt="">
+                         
+                        </a>
+                    </div>
+                    <div class="col">
+                      
+                        <h2 style="margin-top: 30px;">Descargar APA séptima edición. </h2>
+                    
+                    </div>
+
+                </div>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+                <br>
+
+                <div class="row">
+                    <div class="col" style="max-width: 10rem;">
+                        <a href="http://">
+
+                            <img src="/assets/DownloadLogo.png" width="100%" height="auto" alt="">
+                         
+                        </a>
+                    </div>
+                    <div class="col">
+                      
+                        <h2 style="margin-top: 30px;">Descargar calendario 2021 Ulacit </h2>
+                    
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
