--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,8 @@
 <footer class="bg-light text-center text-lg-start">
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2020 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">HECHO POR CLAUDIO</a>
+        © 2021 Copyright:
+        <a class="text-dark" href="https://mdbootstrap.com/">DESAROLLADO POR EL ESTUDIANTE E INGENIERO INFORMATICO, CLAUDIO GONZALEZ HERNANDEZ</a>
     </div>
     <!-- Copyright -->
 </footer>
