--- a/src/app/home-page/home-page.component.css
+++ b/src/app/home-page/home-page.component.css
@@ -1,3 +1,20 @@
 #TestImage{
     background-image: url('/assets/FotoHomePage.png');
 }
+#TitleContactos{
+    font-size: 1.6cm;
+    font-family: 'Lucida Sans';
+    color: rgb(92,44,92);
+    
+}
+#ImageLogoGoes{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
+#TitleCajaRecursos{
+    font-size:3cm;
+    font-family: 'Lucida Sans'; 
+    color: rgb(223, 131, 12);
+}
