--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,11 +1,11 @@
 <div id="TestImage"></div>
 <div>
     <app-navbar></app-navbar>
-    <div style="padding: 1.5cm;"></div>
+    <div style="padding-top: 1.5cm;"></div>
     <div class="container-fluid">
         <div class="row">
             <div class="col" style="margin-left: 50px;">
-                <h1 style="font-size:6cm;font-family: 'Lucida Sans';">OK,</h1>
+                <h1 style="font-size:5cm;font-family: 'Lucida Sans';">OK,</h1>
 
                 <h1 style="font-size:2cm;font-family: 'Lucida Sans'; color: rgb(235, 158, 17);">¿QUÉ PODEMOS <br> HACER
                     POR
@@ -45,7 +45,7 @@
                 <br>
                 <div class="row">
                     <div class="col-sm-1">
-                        <a href="http://instragram.com">
+                        <a href="https://www.instagram.com/goes_global_ulacit/">
                             <img src="/assets/InstagramIcon.png" width="100% " height="auto"></a>
                     </div>
                     <div class="col">
@@ -56,19 +56,21 @@
                 <br>
                 <div class="row">
                     <div class="col-sm-1">
-                        <a href="http://Whatsapp.com">
+                        <a
+                            href="https://api.whatsapp.com/send?phone=50687621573&text=Hola!%20como%20estas!%20te%20escribo%20desde%20la%20pagina%20de%20somosgoes.com%2C%20tengo%20una%20pregunta">
                             <img src="/assets/WhatsAppIcon.png" width="100% " height="auto">
                         </a>
                     </div>
                     <div class="col">
-                        <h2>8888-7171</h2>
+                        <h2>8762-1573</h2>
                     </div>
                 </div>
                 <br>
                 <br>
                 <div class="row">
                     <div class="col-sm-1">
-                        <a href="http://Whatsapp.com">
+                        <a
+                            href="https://api.whatsapp.com/send?phone=50687621573&text=Hola!%20como%20estas!%20te%20escribo%20desde%20la%20pagina%20de%20somosgoes.com%2C%20tengo%20una%20pregunta">
                             <img src="/assets/emailIcon.png" width="100% " height="auto">
                         </a>
                     </div>
@@ -96,18 +98,17 @@
                 <br>
                 <div class="row">
                     <div class="col" style="max-width: 10rem;">
-                        <a href="http://">
+                        <a href="https://drive.google.com/uc?export=download&id=1fiAhmtgz9czKPWuOW1t33trMag3lt10V">
 
                             <img src="/assets/DownloadLogo.png" width="100%" height="auto" alt="">
-                         
+
                         </a>
                     </div>
                     <div class="col">
-                      
-                        <h2 style="margin-top: 30px;">Descargar APA séptima edición. </h2>
-                    
-                    </div>
 
+                        <h2 style="margin-top: 30px;">Descargar APA séptima edición. </h2>
+
+                    </div>
                 </div>
                 <br>
                 <br>
@@ -115,22 +116,19 @@
                 <br>
                 <br>
                 <br>
-
                 <div class="row">
                     <div class="col" style="max-width: 10rem;">
                         <a href="http://">
 
                             <img src="/assets/DownloadLogo.png" width="100%" height="auto" alt="">
-                         
+
                         </a>
                     </div>
                     <div class="col">
-                      
-                        <h2 style="margin-top: 30px;">Descargar calendario 2021 Ulacit </h2>
-                    
+
+                        <h2 style="margin-top: 30px;">
+                            Descargar calendario 2021 Ulacit </h2>
                     </div>
-
-
                 </div>
             </div>
         </div>
