podcast page implementado

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,7 +28,7 @@
                 <a id="TabsStyles" class="nav-link text-dark" routerLink="/Sellos-Verdes"><strong><h3>Sellos Verdes</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong><h3>Podcast</h3></strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Podcast-Goes"><strong><h3>Podcast</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
                 <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong><h2>Webinars</h2></strong></a>
