--- a/src/app/podcast/podcast.component.html
+++ b/src/app/podcast/podcast.component.html
@@ -1,1 +1,41 @@
-<p>podcast works!</p>
+<app-navbar></app-navbar>
+<br>
+<div class="container'fluid">
+    <div class="card-group">
+        <div class="card">
+
+            <div class="card-body">
+                <img src="/assets/FotoPodcastGoes.png" width="100%" height="auto" alt="">
+                <br>
+                <br>
+                <br>
+                <h1 class="text-center">En Spotify <strong>hablamos de todo</strong><br> desde la U, salud emocional
+                    y vida</h1>
+                <div class="card">
+
+                    <div class="card-body">
+
+                        <div class="row">
+                            <div class="col">
+                                <a href="https://www.spotify.com/cr/" target="_blank">
+                                    <img class="d-block mx-auto" src="assets/LogoSpotify.png" width="15%" alt="">
+                                </a>
+                                <br>
+                                <h2 class="text-center">/ElGoesdeUlacit</h2>
+                            </div>
+
+                        </div>
+                        <br>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+
+            <div class="card-body">
+                <img class="d-block mx-auto" src="/assets/GoesSpotify.png" width="50%" height="auto" >
+            </div>
+        </div>
+    </div>
+</div>
