--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,136 +1,123 @@
-<div id="TestImage"></div>
-<div>
-    <app-navbar></app-navbar>
-    <div style="padding-top: 1.5cm;"></div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col" style="margin-left: 50px;">
-                <h1 style="font-size:5cm;font-family: 'Lucida Sans';">OK,</h1>
+<app-navbar></app-navbar>
 
-                <h1 style="font-size:2cm;font-family: 'Lucida Sans'; color: rgb(235, 158, 17);">¿QUÉ PODEMOS <br> HACER
-                    POR
-                    VOS?</h1>
+<div class="container-fluid">
 
-                <h2 class="text-justify">Podemos apoyarte en los diferentes procesos administrativos de la U, darte
-                    soporte
-                    si tenés problemas de
-                    matrícula, dudas sobre cursos, Blackboard, Enrollogic y hasta escucharte si estás pasando un
-                    problema
-                    que afecte tu rendimiento en la U, somos estudiantes apoyando estudiantes. </h2>
-            </div>
+    <section>
 
-            <div class="col">
-                <br>
-                <br>
-                <img src="/assets/Foto2HomePage.png" width="100%" height="auto" alt="">
+        <div class="card-group">
+            <div class="card">
 
-            </div>
-        </div>
-    </div>
+                <div class="card-body">
 
-    <div class="container-fluid">
-        <div style="padding: 50px;"></div>
-        <hr>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
+                    <h1 style="font-size: 250px;">OK,</h1>
 
-            <div class="col">
-                <strong>
-                    <h1 id="TitleContactos">CONTACTOS</h1>
-                </strong>
-                <br>
-                <br>
-                <br>
-                <br>
-                <div class="row">
-                    <div class="col-sm-1">
-                        <a href="https://www.instagram.com/goes_global_ulacit/">
-                            <img src="/assets/InstagramIcon.png" width="100% " height="auto"></a>
-                    </div>
-                    <div class="col">
-                        <h2>Somos_GOES</h2>
-                    </div>
-                </div>
-                <br>
-                <br>
-                <div class="row">
-                    <div class="col-sm-1">
-                        <a
-                            href="https://api.whatsapp.com/send?phone=50687621573&text=Hola!%20como%20estas!%20te%20escribo%20desde%20la%20pagina%20de%20somosgoes.com%2C%20tengo%20una%20pregunta">
-                            <img src="/assets/WhatsAppIcon.png" width="100% " height="auto">
-                        </a>
-                    </div>
-                    <div class="col">
-                        <h2>8762-1573</h2>
-                    </div>
-                </div>
-                <br>
-                <br>
-                <div class="row">
-                    <div class="col-sm-1">
-                        <a
-                            href="https://api.whatsapp.com/send?phone=50687621573&text=Hola!%20como%20estas!%20te%20escribo%20desde%20la%20pagina%20de%20somosgoes.com%2C%20tengo%20una%20pregunta">
-                            <img src="/assets/emailIcon.png" width="100% " height="auto">
-                        </a>
-                    </div>
-                    <div class="col">
-                        <h2>ayuda@somos-goes.com</h2>
-                    </div>
+                    <h4 style="font-size:80px;color: orange;">¿QUÉ PODEMOS
+                        HACER POR VOS?</h4>
+
+                    <p><strong>Podemos apoyarte en los diferentes procesos administrativos de la U, darte soporte si
+                            tenés
+                            problemas de matrícula, dudas sobre cursos, Blackboard, Enrollogic y hasta escucharte si
+                            estás
+                            pasando un problema que afecte tu rendimiento en la U, somos estudiantes apoyando
+                            estudiantes.</strong>
+                    </p>
+
                 </div>
             </div>
-            <div class="col-md-6">
-                <img id="ImageLogoGoes" src="/assets/LogoGoes.png" width="100%" height="auto">
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid">
-        <div style="padding: 50px; "></div>
-        <hr>
-    </div>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col">
-                <img id="ImageLogoGoes" src="/assets/CajadeRecursos.png" width="70%" alt="">
-                <h1 class="text-center" id="TitleCajaRecursos">CAJA DE RECURSOS</h1>
-            </div>
-            <div class="col">
-                <br>
-                <div class="row">
-                    <div class="col" style="max-width: 10rem;">
-                        <a href="https://drive.google.com/uc?export=download&id=1fiAhmtgz9czKPWuOW1t33trMag3lt10V">
+            <div class="card">
 
-                            <img src="/assets/DownloadLogo.png" width="100%" height="auto" alt="">
-
-                        </a>
-                    </div>
-                    <div class="col">
-
-                        <h2 style="margin-top: 30px;">Descargar APA séptima edición. </h2>
-
-                    </div>
-                </div>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <div class="row">
-                    <div class="col" style="max-width: 10rem;">
-                        <a href="http://">
-
-                            <img src="/assets/DownloadLogo.png" width="100%" height="auto" alt="">
-
-                        </a>
-                    </div>
-                    <div class="col">
-
-                        <h2 style="margin-top: 30px;">
-                            Descargar calendario 2021 Ulacit </h2>
-                    </div>
+                <div class="card-body">
+                    <img class="img-fluid" src="/assets/Foto2HomePage.png" alt="">
                 </div>
             </div>
         </div>
-    </div>
+
+    </section>
+    <hr>
+
+    <section>
+
+        <div class="card-group">
+            <div class="card">
+
+                <div class="card-body">
+
+                    <h1 id="TituloContactos" style="font-size: 70px;">CONTACTOS</h1>
+
+                    <ul class="list-group">
+                        <li class="list-group-item">
+
+                            <a href="http://https://www.instagram.com/goes_global_ulacit/">
+                                <img src="/assets/InstagramIcon.png" width="auto" height="auto">
+                            </a>
+                            Somos_Goes
+                        </li>
+                        <li class="list-group-item">
+                            <a
+                                href="https://api.whatsapp.com/send?phone=50687621573&text=Hola!%20como%20estas!%20te%20escribo%20desde%20la%20pagina%20de%20somosgoes.com%2C%20tengo%20una%20pregunta">
+                                <img src="/assets/WhatsAppIcon.png" width="auto" height="auto">
+                            </a>
+                            8762-1573
+                        </li>
+                        <li class="list-group-item">
+                            <a href="mailto:ayuda@somos-goes.com"> <img src="/assets/emailIcon.png" width="auto"
+                                    height="auto"></a>
+
+                            ayuda@somos-goes.com
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+            <div class="card">
+
+                <div class="card-body">
+                    <img class="img-fluid d-block mx-auto" src="/assets/LogoGoes.png" width="60%" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr>
+
+    <section>
+
+        <div class="card-group">
+            <div class="card">
+
+                <div class="card-body">
+                    <img class="img-fluid d-block mx-auto" src="/assets/CajadeRecursos.png" width="70%">
+                    <br>
+                    <h1 id="TituloCajaRecursos" class="text-center">CAJA DE RECURSOS</h1>
+                </div>
+            </div>
+            <div class="card">
+
+                <div class="card-body">
+
+                    <ul class="list-group">
+                        <li class="list-group-item text-center">
+
+                            <a href="https://drive.google.com/uc?export=download&id=1fiAhmtgz9czKPWuOW1t33trMag3lt10V">
+                                <img class="img-fluid " src="/assets/DownloadLogo.png" width="auto"
+                                    height="auto">
+                            </a>
+                            Descargar APA séptima edición.
+                        </li>
+                        <li class="list-group-item text-center">
+                            <a
+                                href="https://api.whatsapp.com/send?phone=50687621573&text=Hola!%20como%20estas!%20te%20escribo%20desde%20la%20pagina%20de%20somosgoes.com%2C%20tengo%20una%20pregunta">
+                                <img class="img-fluid " src="/assets/DownloadLogo.png" width="auto"
+                                    height="auto">
+                            </a>
+                            Descargar calendario 2021 Ulacit
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 </div>
