pagina webinar completa

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
 <router-outlet></router-outlet>
 
-<a href="https://www.ulacit.ac.cr/plataforma-digital/" class="float" target="_blank">
-    <img style="border-radius: 55px;" src="/assets/IconoPlataformaServicios.png" alt="">
-</a>
+
 <!-- Footer -->
 <footer class="bg-light text-center text-lg-start">
-    <!-- Copyright -->
-    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-        © 2021 Copyright:
-        <a class="text-dark" href="https://mdbootstrap.com/">DESAROLLADO POR EL ESTUDIANTE E INGENIERO INFORMATICO, CLAUDIO GONZALEZ HERNANDEZ</a>
-    </div>
-    <!-- Copyright -->
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+    © 2021 Copyright:
+    <a class="text-dark" href="https://mdbootstrap.com/"
+      >DESAROLLADO POR EL ESTUDIANTE E INGENIERO INFORMATICO, CLAUDIO GONZALEZ
+      HERNANDEZ</a
+    >
+  </div>
+  <!-- Copyright -->
 </footer>
