--- a/src/app/webinars/webinars.component.html
+++ b/src/app/webinars/webinars.component.html
@@ -1,1 +1,83 @@
-<p>webinars works!</p>
+<app-navbar></app-navbar>
+
+<div class="container-fluid">
+  <img
+    class="img-fluid"
+    src="/assets/WebinarMemorables.png"
+    width="100%"
+    alt=""
+  />
+
+  <div class="card-deck">
+    <div class="card">
+      <img class="card-img-top" src="holder.js/100x180/" alt="" />
+      <div class="card-body">
+        <h4 class="card-title">Webinar 1 Utilizacion de Blackboard Ultra</h4>
+
+        <iframe
+          width="100%"
+          height="300px"
+          src="https://www.youtube.com/embed/ETgjXuR2uZA?list=PL_PsKMRdMT9E0ObT2xZ-xTTq3odvBbeX2"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="holder.js/100x180/" alt="" />
+      <div class="card-body">
+        <h4 class="card-title">Behavioral Trends that Will Reshape Our Post-COVID World</h4>
+        <iframe
+          width="100%"
+          height="300px"
+          src="https://www.youtube.com/embed/uk3nER4CelI?list=PL_PsKMRdMT9GcvwCkX_vA2m9E8D63cFKf"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="holder.js/100x180/" alt="" />
+      <div class="card-body">
+        <h4 class="card-title">Webinar 3 Publicidad Programatica</h4>
+        <iframe
+          width="100%"
+          height="300px"
+          src="https://www.youtube.com/embed/AH5OO5VIw3o"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+    </div>
+  </div>
+  <br />
+  <div class="card-deck">
+    <div class="card">
+      <img class="card-img-top" src="holder.js/100x180/" alt="" />
+      <div class="card-body">
+        <h4 class="card-title">Webinar 4</h4>
+        <p class="card-text">Coming soon....</p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="holder.js/100x180/" alt="" />
+      <div class="card-body">
+        <h4 class="card-title">Webinar 5</h4>
+        <p class="card-text">Coming soon....</p>
+      </div>
+    </div>
+    <div class="card">
+      <img class="card-img-top" src="holder.js/100x180/" alt="" />
+      <div class="card-body">
+        <h4 class="card-title">Webinar 6</h4>
+        <p class="card-text">Coming soon....</p>
+      </div>
+    </div>
+  </div>
+</div>
