--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -31,7 +31,7 @@
                 <a id="TabsStyles" class="nav-link text-dark" routerLink="/Podcast-Goes"><strong><h3>Podcast</h3></strong></a>
             </li>
             <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Contact-Me"><strong><h2>Webinars</h2></strong></a>
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Webinars"><strong><h2>Webinars</h2></strong></a>
             </li>
            
         </ul>
