--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<img  src="/assets/FotoHomePage.png" width="100% "  height="auto" >
+<img src="/assets/FotoHomePage.png" width="100% "  height="auto" >
 
-<nav class="navbar navbar-expand-md navbar-light bg-light d-flex justify-content-center" style="border-style: solid; border-color: rgb(92,44,92);">
+<nav class="navbar navbar-expand-lg navbar-light bg-light d-flex justify-content-center" style="border-style: solid; border-color: rgb(92,44,92);">
    
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId" aria-controls="collapsibleNavId"
         aria-expanded="false" aria-label="Toggle navigation">
@@ -9,29 +9,29 @@
     <div class="collapse navbar-collapse" id="collapsibleNavId" >
         <ul class="navbar-nav">
 
-            <li class="nav-item pr-5" >
-                <a id="TabsStyles" class="nav-link active text-dark" aria-current="page" href="/"><strong><h3>¿Que hacemos?</h3></strong></a>
+            <li class="nav-item ml-5" >
+                <a id="TabsStyles" class="nav-link active text-dark" aria-current="page" href="/"><strong><h4>¿Que hacemos?</h4></strong></a>
             </li>
-            <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Centro-Ayuda-Goes"><strong><h3>Centro de Ayuda</h3></strong></a>
+            <li class="nav-item ml-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Centro-Ayuda-Goes"><strong><h4>Centro de Ayuda</h4></strong></a>
             </li>
-            <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Oficinas-Virtuales"><strong><h3>Oficinas Virtuales</h3></strong></a>
+            <li class="nav-item ml-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Oficinas-Virtuales"><strong><h4>Oficinas Virtuales</h4></strong></a>
             </li>
-            <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Noticias-Goes"><strong><h3>Ultimas Noticias</h3></strong></a>
+            <li class="nav-item ml-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Noticias-Goes"><strong><h4>Ultimas Noticias</h4></strong></a>
             </li>
-            <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Vitrina-Estudiantil"><strong><h3>Vitrina</h3></strong></a>
+            <li class="nav-item ml-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Vitrina-Estudiantil"><strong><h4>Vitrina</h4></strong></a>
             </li>
-            <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Sellos-Verdes"><strong><h3>Sellos Verdes</h3></strong></a>
+            <li class="nav-item ml-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Sellos-Verdes"><strong><h4>Sellos Verdes</h4></strong></a>
             </li>
-            <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Podcast-Goes"><strong><h3>Podcast</h3></strong></a>
+            <li class="nav-item ml-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Podcast-Goes"><strong><h4>Podcast</h4></strong></a>
             </li>
-            <li class="nav-item pr-5"  id="TabsGoes">
-                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Webinars"><strong><h2>Webinars</h2></strong></a>
+            <li class="nav-item ml-5"  id="TabsGoes">
+                <a id="TabsStyles" class="nav-link text-dark" routerLink="/Webinars"><strong><h4>Webinars</h4></strong></a>
             </li>
            
         </ul>
